--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,17 +1,24 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
 header {
-    background-color: #1c1c1c;
+    background-color: #1c1c1c ;
     height: 100px;
     width: 1000px;
-    margin: 0 auto;
+    margin: 0 450px;
     border-radius: 0 0 15px 15px;
-    
+    position: absolute;
+    opacity: 0.8;
+ 
 }
 
 header nav {
     display: block;
     padding-top: 0px;
     width: auto;
-    position: absolute;
     margin-right: 40;
     float: left;
     margin-top:20px;
@@ -37,47 +44,16 @@ header nav li a:hover {
 }
 
 
-.main_info{
-    padding-top: 1%;
-    margin: 0 auto;
-    width: auto;
-    height: 400px;
-}
-
-.main_info {
-    position: relative;
-}
-
-#short_story {
-    font-family: 'Hind', sans-serif;
-    font-size: 18px;
-    text-align: left;
-    float: left;
-    width: 50%;
-    padding-bottom: 1%;
-    padding-top: 15%;
-}
-
-.main_photo {
-    float: right;
-    display:inline-block;
-    padding-bottom: 1%;
-}
-
-.main_photo img {
-    margin: 0 auto;
-    display: block;
-    border-radius: 50%;
-}
 
 footer {
     background-color: #1c1c1c;
     height: 100px;
     width: 100%;
-    margin-bottom: 0px;
+    left: 0px;
+    bottom: 0px;
 }
 
-#footer_nav a{
+.footer_nav a{
     margin-left: 300px;
     color: white;
     text-decoration:underline;
@@ -87,10 +63,18 @@ footer {
     font-family: 'Open Sans', sans-serif;}
     
     
-#footer_nav li {
+.footer_nav li {
     display: inline;
 }
     
-#footer_nav li a:hover {
+.footer_nav li a:hover {
     color: grey;
+}
+
+.social {
+	float: right;
+    display:block;
+    margin-left: 10px;
+    margin-top: 25px;
+    padding-left: 1%;
 }
