--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,24 +1,30 @@
-body {
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
+body,html{
+    margin:0 auto;
+    padding:0;
+    background-size: cover;
+    width:auto;
+    height:auto;
 }
 
-
 header {
+    margin: 0 auto;
+    left: 0;
+    right: 0;
     background-color: #1c1c1c ;
     height: 100px;
     width: 1000px;
-    margin: 0 455px;
     border-radius: 0 0 15px 15px;
     position: absolute;
     opacity: 0.8;
- 
+    max-width: 100%;
+    min-width: 20%;
+    z-index: 2;
+    min-height: 125px;
+    
 }
 
 header nav {
     display: block;
-    padding-top: 0px;
     width: auto;
     margin-right: 40;
     float: left;
@@ -31,8 +37,8 @@ header li {
 }
 
 header nav li a {
-    
-    margin-left: 110px;
+    display: inline-block;
+    margin-left: 100px;
     color: white;
     text-decoration:none;
     font-size: 20px;
@@ -44,37 +50,87 @@ header nav li a:hover {
     color: grey;
 }
 
+main {
+    width:auto;
+    height:auto;
+    
+}
 
+.home {
+    position:relative;
+    padding:0;
+    width: auto;
+    text-align:center;
+}
+
+.home img {
+    min-height: 170px;
+    max-width:100%;
+    height: auto;
+}
+    
 
 footer {
     background-color: #1c1c1c;
     height: 100px;
-    width: 100%;
-   position: relative;top:50px;
+    position: relative;
+    clear: both;
+    width: auto;
+}
+
+
+    
+.footer_nav li a:hover {
+    color: grey;
+    
+}
+
+.footer_nav { 
+    margin: 0 auto;
+    width:auto;
+    height:auto;
+    
+}
+
+.footer_nav li {
+    display: inline-block;
+    
 }
 
 .footer_nav a{
-    margin-left: 300px;
+    margin: 0px 50px;
     color: white;
     text-decoration:underline;
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 2px;
-    font-family: 'Open Sans', sans-serif;}
+    font-family: 'Open Sans', sans-serif;
+    width: auto;
     
-    
-.footer_nav li {
-    display: inline;
 }
-    
-.footer_nav li a:hover {
+
+.created {
+    text-align: center;
+    display: block;
+    padding-top: 2%;
     color: grey;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    margin: 0 auto;
+    width: 20%;
+    height:auto;
+   
 }
 
 .social {
-	float: right;
-    display:block;
-    margin-left: 10px;
-    margin-top: 25px;
-    padding-left: 1%;
+    float: right;
+    margin-right: 4%;
+    width: auto;
+    height:auto;
+    
+}
+
+.social img{
+    border-radius: 50%;
 }
