--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -5,6 +5,134 @@ body,html {
     
 }
 
+main{
+    font-family: 'Oxygen', sans-serif;
+}
+
+h1{
+    text-align: center;
+}
+.submit_form {
+    float: left;
+    display: inline-block;
+    width: 50%;
+    padding-bottom: 1%;
+}
+
+
+::-webkit-input-placeholder {
+   color: black;
+   font-family: 'Jura', sans-serif;
+   font-size: 13px;
+}
+
+:-moz-placeholder { 
+   color: black;  
+   font-family: 'Jura', sans-serif;
+   font-size: 13px;
+}
+
+::-moz-placeholder { 
+   color: black; 
+   font-family: 'Jura', sans-serif;
+   font-size: 13px;
+}
+
+:-ms-input-placeholder {  
+   color: black; 
+   font-family: 'Jura', sans-serif;
+   font-size: 13px;
+}
+
+
+input[type=text] {
+    width: 46%;
+    padding: 12px 20px;
+    margin: 0px 4% 0 0; 
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 1px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.name_surname_fieldset {
+    width: 100%;
+}
+
+#surname {
+    float:right;
+    margin-right:0;
+}
+
+input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin-top: 20px;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 1px;
+    box-sizing: border-box;
+    font-family: Verdana, serif;
+    font-size: 14px;
+}
+
+textarea {
+    width: 100%;
+    height: 120px;
+    margin-top: 20px;
+    padding: 14px 20px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 1px;
+    font-family: Verdana, serif;
+    font-size: 16px;
+    resize: yes;
+}
+
+#submit_button {
+    width: 100px;
+    float: left;
+    background-color: transparent;
+    font-size: 13px;
+    color: black;
+    font-family: 'Open Sans', sans-serif;
+    border-color: black;
+    border: 1px solid;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-decoration: none;
+    padding: 1em;
+    display: block;
+    line-height: 1em;
+    margin-top: 15px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#submit_button:hover {
+    background: linear-gradient(to bottom, #A0A0A9, #A2A2A9);
+}
+
+.contact_info {
+    display: inline-block;
+    width: 40%;
+    margin-left: 10%;
+    padding-bottom: 1%;
+}
+
+.contact_info h2 {
+    margin-top: 0%;
+    text-align: center;
+    margin-right: 20%;
+    margin-left: 20%;
+}
+
+.contact_info p {
+  font-size: 14px;
+}
+
+
 .map iframe {
     width: 100%;
     margin-bottom: 0px;
