--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,5 +1,5 @@
 body,html {
-    background-color: #E3E3E5;;
+    background-color: #E3E3E9;;
     width:auto;
     height:auto;
 }
@@ -10,7 +10,6 @@ body,html {
     margin: 0 auto;
     width: 80%;
     height: 300px;
-    font-family: 'Open Sans', sans-serif;
     padding-bottom: 3%;
 }
 
@@ -38,9 +37,8 @@ body,html {
     padding-top: 2%;
     margin: 0 auto;
     width: 80%;
-    height: 400px;
-    font-family: 'Open Sans', sans-serif;
-    padding-botto: 3%;
+    height: 450px;
+    padding-bottom: 3%;
 }
 .work_exp{
     float: left;
@@ -67,9 +65,8 @@ body,html {
     padding-top: 2%;
     margin: 0 auto;
     width: 80%;
-    height: 220px;
-    font-family: 'Open Sans', sans-serif;
-    padding-botto: 3%;
+    height: 250px;
+    padding-bottom: 3%;
 }
 .techno{
     float: left;
@@ -89,4 +86,15 @@ body,html {
 }
 .experience h2 {
     font-size: 16px;
+}
+
+main{
+    font-family: 'Oxygen', sans-serif;
+}
+main ul {
+   margin-left: 10%;
+   padding-left: 20%;
+}
+main ul li{
+   text-align: left;
 }
