--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,4 @@
-body,html{
+body,html {
     margin:0 auto;
     padding:0;
     background-size: cover;
@@ -29,7 +29,7 @@ header nav {
     width: auto;
     margin-right: 40;
     float: left;
-    margin-top:20px;
+    margin-top:30px;
     
 }
 
@@ -74,9 +74,8 @@ main {
 footer {
     background-color: #1c1c1c;
     height: 100px;
-    position: relative;
-    clear: both;
-    width: auto;
+    position: absolute;
+    width: 100%;
 }
 
 
@@ -91,8 +90,10 @@ footer {
     margin: 0 auto;
     width:auto;
     height:auto;
-    
+    margin-top: 20px;
+    text-align: center;
 }
+
 
 .footer_nav li {
     display: inline-block;
@@ -113,26 +114,26 @@ footer {
 
 .created {
     text-align: center;
-    display: inline-block;
-    padding-top: 2%;
+    display: block;
     color: grey;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     font-size: 14px;
     margin: 0 auto;
-    width: 20%;
-    height:auto;
+    width: auto;
    
 }
 
 .social {
     float: right;
-    margin-right: 4%;
-    width: auto;
-    height:auto;
-    
+    margin-right: 5%;
+    display: block;
 }
 
 .social img{
     border-radius: 50%;
+}
+header,footer>ul{
+    padding:0;
+    margin: 0 auto;
 }
