--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -15,8 +15,9 @@ h1{
 .submit_form {
     float: left;
     display: inline-block;
-    width: 50%;
+    width: 30%;
     padding-bottom: 1%;
+    margin-left: 5%;
 }
 
 
