--- a/styles/about.css
+++ b/styles/about.css
@@ -4,8 +4,37 @@ body,html {
     height:auto;
     
 }
-#lightslider{
-  width: 70%;
-  height: 30%;
-  margin: 0 10%;
+main{
+    font-family: 'Oxygen', sans-serif;
 }
+.galery{
+    width:auto;
+    margin: 1% 7%;
+    height: auto;
+    padding: 2%;
+}
+.myslide img{
+    width: auto;
+    height: auto;
+}
+
+.paragraph{
+    text-align: center;
+    margin: 1% 30%
+}
+
+
+.contact {
+    margin: 0 30%;
+    border: 1px solid #333;
+    display: inline-block;
+    padding: 5px 25px; 
+    text-decoration: none; 
+    color: #000;
+    margin-bottom: 5%;
+    
+}
+.contact:hover {
+    background: linear-gradient(to bottom, #F0F0E0, #A2A2A9);
+   }
+   
