--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,10 @@ body,html {
     height:auto;
     
 }
+
+main{ font-family: 'Oswald', sans-serif;
+    
+}
 h1 {
     left: 0;
     right: 0;
@@ -18,7 +22,6 @@ h1 {
 }
 h2 {
     width: 50%;
-    font-family: 'Oswald', sans-serif;
     text-align: center;
     padding-top: 5%;
 } 
@@ -39,7 +42,7 @@ h2 {
     width: 50%;
     padding-bottom: 10%;
     padding-top: 10%;
-    font-family: 'Oswald', sans-serif;
+   
 }
 
 .main_photo {
@@ -62,7 +65,7 @@ h2 {
     text-decoration: none; 
     color: #000;
     margin-bottom: 5%;
-    font-family: 'Oswald', sans-serif;
+    
 }
 
 .aboutbutton:hover {
