--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -119,6 +119,8 @@ footer {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     font-size: 14px;
+    margin-bottom: 0px;
+    
 
 }
 
