--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -120,10 +120,12 @@ footer {
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 0px;
-    
+   position: absolute;
+   bottom: 10%;
+   left: 0;
+   right: 0;
 
 }
-
 .social {
     float: right;
     margin-right: 5%;
@@ -136,4 +138,10 @@ footer {
 header,footer>ul{
     padding:0;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 600px) {
+    .social {
+        visibility: hidden;
+}
 }
